# claude-code-thy

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  environment.yml  helloworld.py  helloworld03.py  helloworld04.py  pyproject.toml  功能开发列表
docs/: 06_MCP全量实现规划.md  07_功能测试手册.md  07_功能测试手册260419.md  08_agent工具详解.md  09_Web_API接口设计.md  09_skill工具详解.md  10_提示词工程规划.md  11_会话日志系统开发规划.md  常用命令.md  提交github.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/lib/: api.ts  (+3 more)
manual-test/: note.txt
player01/: README.md  snake_game.html  snake_game_enhanced.html
player02/: README.md
skill-packs/triggered-review/: SKILL.md
src/claude_code_thy/: __init__.py  cli.py  cli_mcp.py  commands.py  config.py  models.py  query_engine.py  runtime.py  services.py  settings.py  shells.py
tests/: test_agent_tool.py  test_anthropic_provider.py  test_bash_tool.py  test_browser_search.py  test_browser_search_tool.py  test_browser_tool.py  test_cli_mcp.py  test_commands.py  test_config.py  test_file_guards.py  test_mcp_auth_runtime.py  test_mcp_config.py  test_mcp_helpers.py  test_mcp_layers.py  test_openai_responses_provider.py  test_package_data.py  test_permission_flow.py  test_prompts.py  test_provider_factory.py  test_query_engine.py  test_runtime_task_notifications.py  test_server_chat.py  test_server_presenters.py  test_server_runtime_prompt_preview.py  test_session_logs.py  test_session_store.py  test_settings.py  test_shells.py  test_skills.py  test_task_manager.py  test_tools.py  test_ui_tool_views.py
tmp_http_scope_smoke/: .mcp.json
(+191 files in other folders)
