[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-thy"
version = "0.1.0"
description = "Python-first Claude Code remake with a Web UI and structured backend runtime."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "mcp[cli]>=1,<2",
  "playwright>=1.52,<2",
  "rich>=13.7,<15",
  "typer>=0.12,<1",
  "uvicorn>=0.30,<1",
]

[project.scripts]
claude-code-thy = "claude_code_thy.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"claude_code_thy" = [
  "prompts/sections/*.md",
  "prompts/templates/*.md",
  "prompts/providers/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
